dsp/2021.2/_sources/rst/class_xf_dsp_aie_fir_sr_asym_fir_sr_asym_graph.rst.txt
.. index:: pair: class; xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph
.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph:

template class xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph
============================================================

.. toctree::
	:hidden:

.. code-block:: cpp
	:class: overview-code-block

	#include "fir_sr_asym_graph.hpp"


Overview
~~~~~~~~

fir_sr_asym is a Asymmetric Single Rate FIR filter

These are the templates to configure the Asymmetric Single Rate FIR class.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - TT_DATA

        - 
          describes the type of individual data samples input to and output from the filter function. This is a typename and must be one of the following:
          
          int16, cint16, int32, cint32, float, cfloat.

    *
        - TT_COEFF

        - 
          describes the type of individual coefficients of the filter taps.
          
          It must be one of the same set of types listed for TT_DATA and must also satisfy the following rules:
          
          * Complex types are only supported when TT_DATA is also complex.
          
          * 32 bit types are only supported when TT_DATA is also a 32 bit type,
          
          * TT_COEFF must be an integer type if TT_DATA is an integer type
          
          * TT_COEFF must be a float type if TT_DATA is a float type.

    *
        - TP_FIR_LEN

        - is an unsigned integer which describes the number of taps in the filter.

    *
        - TP_SHIFT

        - 
          describes power of 2 shift down applied to the accumulation of FIR terms before output.
          
          TP_SHIFT must be in the range 0 to 61.

    *
        - TP_RND

        - 
          describes the selection of rounding to be applied during the shift down stage of processing. TP_RND must be in the range 0 to 7 where
          
          * 0 = floor (truncate) eg. 3.8 Would become 3.
          
          * 1 = ceiling e.g. 3.2 would become 4.
          
          * 2 = round to positive infinity.
          
          * 3 = round to negative infinity.
          
          * 4 = round symmetrical to infinity.
          
          * 5 = round symmetrical to zero.
          
          * 6 = round convergent to even.
          
          * 7 = round convergent to odd.
            
            Modes 2 to 7 round to the nearest integer. They differ only in how they round for values of 0.5.

    *
        - TP_INPUT_WINDOW_VSIZE

        - 
          describes the number of samples in the window API used for input to the filter function.
          
          The number of values in the output window will be TP_INPUT_WINDOW_VSIZE also by virtue the single rate nature of this function.
          
          Note: Margin size should not be included in TP_INPUT_WINDOW_VSIZE.

    *
        - TP_CASC_LEN

        - 
          describes the number of AIE processors to split the operation over.
          
          This allows resource to be traded for higher performance. TP_CASC_LEN must be in the range 1 (default) to 9.

    *
        - TP_USE_COEFF_RELOAD

        - 
          allows the user to select if runtime coefficient reloading should be used.
          
          When defining the parameter:
          
          * 0 = static coefficients, defined in filter constructor,
          
          * 1 = reloadable coefficients, passed as argument to runtime function.
            
            Note: when used, optional port: ``port<input> coeff;`` will be added to the FIR.

    *
        - TP_NUM_OUTPUTS

        - 
          sets the number of ports to broadcast the output to.
          
          Note: when used, optional port: ``port<output> out2;`` will be added to the FIR.
          
          Note: For Windows API, additional output an exact copy of the data.
          
          Stream API interleaves the output data with a 128-bit pattern, e.g.:
          
          
          
          * samples 0-3 to be sent over stream0 for cint16 data type,
          
          * samples 4-7 to be sent over stream1 for cint16 data type.

    *
        - TP_API

        - 
          specifies if the input/output interface should be window-based or stream-based.
          
          The values supported are 0 (window API) or 1 (stream API).

    *
        - TP_DUAL_IP

        - 
          allows 2 stream inputs to be connected to FIR, increasing available throughput.
          
          When set to 0, single stream will be connected as FIRs input.
          
          When set to 1, two stream inputs will be connected.
          
          In such case data should be organized in 128-bit interleaved pattern, e.g.:
          
          
          
          * samples 0-3 to be sent over stream0 for cint16 data type,
          
          * samples 4-7 to be sent over stream1 for cint16 data type.
            
            Note: Dual input streams offer no throughput gain if only single output stream would be used. Therefore, dual input streams are only supported with 2 output streams.
            
            Note: Dual input ports offer no throughput gain if port api is windows. Therefore, dual input ports are only supported with streams and not windows. This is the class for the Asymmetric Single Rate FIR graph

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a87879f7d88af759f028391f7bba3ba5e:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::create_connections:
.. ref-code-block:: cpp
	:class: overview-code-block

	template <
	    typename TT_DATA,
	    typename TT_COEFF,
	    unsigned int TP_FIR_LEN,
	    unsigned int TP_SHIFT,
	    unsigned int TP_RND,
	    unsigned int TP_INPUT_WINDOW_VSIZE,
	    unsigned int TP_CASC_LEN = 1,
	    unsigned int TP_USE_COEFF_RELOAD = 0,
	    unsigned int TP_NUM_OUTPUTS = 1,
	    unsigned int TP_DUAL_IP = 0,
	    unsigned int TP_API = 0
	    >
	class fir_sr_asym_graph:
	    public :ref:`xf::dsp::aie::fir::sr_asym::fir_sr_asym_base_graph<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__base__graph>`
	    public :ref:`xf::dsp::aie::fir::sr_asym::conditional_in_graph<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1conditional__in__graph>`
	    public :ref:`xf::dsp::aie::fir::sr_asym::conditional_out_graph<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1conditional__out__graph>`
	    public :ref:`xf::dsp::aie::fir::sr_asym::conditioanl_rtp_graph<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1conditioanl__rtp__graph>`

Inherited Members
-----------------

.. ref-code-block:: cpp
	:class: overview-inherited-code-block

	// fields

	port <input> :ref:`in<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__base__graph_1acb1f3b93f71e4ec08292c24e00dc9129>`
	port <output> :ref:`out<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__base__graph_1ae88952cd9f30608b6a0aa01e7b7bd448>`
	kernel :ref:`m_firKernels<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__base__graph_1a1335e230d55187a1c4a906b68853179d>`[TP_CASC_LEN]
	port <input> :ref:`in2<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1conditional__in__graph_1a6759dd0e2be37c4aa3a9c904a17e68bd>`
	port <output> :ref:`out2<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1conditional__out__graph_1af3b3dca71fb11487164f88a21988c05a>`
	port <input> :ref:`coeff<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1conditioanl__rtp__graph_1a95c65db2e2974bf41bb982d7dc1158a1>`


Methods
~~~~~~~

.. FunctionSection

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1ab4402f1698e230952d5d87fb9aeb30e2:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::fir_sr_asym_graph:

fir_sr_asym_graph
-----------------


fir_sr_asym_graph overload (1)
++++++++++++++++++++++++++++++


.. ref-code-block:: cpp
	:class: title-code-block

	fir_sr_asym_graph ()

This is the constructor function for the Symmetric Single Rate FIR graph.

Constructor has no args. To be used with TP_USE_COEFF_RELOAD=1, taps needs to be passed through RTP.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a5d072c1b740351bf3e79c3683051d1ed:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::fir_sr_asym_graph-2:

fir_sr_asym_graph overload (2)
++++++++++++++++++++++++++++++


.. ref-code-block:: cpp
	:class: title-code-block

	fir_sr_asym_graph (const std::vector <TT_COEFF>& taps)

This is the constructor function for the Symmetric Single Rate FIR graph.

Constructor has the following arguments:

* taps a reference to the std::vector array of taps values of type TT_COEFF.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1af80d8baeb9be2e0e17c6bad42838b692:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::getkernels:

getKernels
----------


.. ref-code-block:: cpp
	:class: title-code-block

	kernel* getKernels ()

Access function to get pointer to kernel (or first kernel in a chained configuration). No arguments required.

