dsp/2022.1/_sources/rst/class_xf_dsp_aie_fir_sr_asym_fir_sr_asym_graph.rst.txt
.. index:: pair: class; xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph
.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph:

template class xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph
============================================================

.. toctree::
	:hidden:

.. code-block:: cpp
	:class: overview-code-block

	#include "fir_sr_asym_graph.hpp"


Overview
~~~~~~~~

fir_sr_asym is a Asymmetric Single Rate FIR filter

These are the templates to configure the Asymmetric Single Rate FIR class.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - TT_DATA

        - 
          describes the type of individual data samples input to and output from the filter function. This is a typename and must be one of the following:
          
          int16, cint16, int32, cint32, float, cfloat.

    *
        - TT_COEFF

        - 
          describes the type of individual coefficients of the filter taps.
          
          It must be one of the same set of types listed for TT_DATA and must also satisfy the following rules:
          
          * Complex types are only supported when TT_DATA is also complex.
          
          * 32 bit types are only supported when TT_DATA is also a 32 bit type,
          
          * TT_COEFF must be an integer type if TT_DATA is an integer type
          
          * TT_COEFF must be a float type if TT_DATA is a float type.

    *
        - TP_FIR_LEN

        - is an unsigned integer which describes the number of taps in the filter.

    *
        - TP_SHIFT

        - 
          describes power of 2 shift down applied to the accumulation of FIR terms before output.
          
          TP_SHIFT must be in the range 0 to 61.

    *
        - TP_RND

        - 
          describes the selection of rounding to be applied during the shift down stage of processing. TP_RND must be in the range 0 to 7 where
          
          * 0 = floor (truncate) eg. 3.8 Would become 3.
          
          * 1 = ceiling e.g. 3.2 would become 4.
          
          * 2 = round to positive infinity.
          
          * 3 = round to negative infinity.
          
          * 4 = round symmetrical to infinity.
          
          * 5 = round symmetrical to zero.
          
          * 6 = round convergent to even.
          
          * 7 = round convergent to odd.
            
            Modes 2 to 7 round to the nearest integer. They differ only in how they round for values of 0.5.

    *
        - TP_INPUT_WINDOW_VSIZE

        - 
          describes the number of samples to process in one simulation iteration of the filter function.
          
          The number of samples on the output will be TP_INPUT_WINDOW_VSIZE also by virtue the single rate nature of this function.
          
          When TP_DUAL_IP is used and PORT_API is streaming (1), this defines the the number of samples in total (spread over two ports) to process in one iteration. Note: Margin size should not be included in TP_INPUT_WINDOW_VSIZE.

    *
        - TP_CASC_LEN

        - 
          describes the number of AIE processors to split the operation over.
          
          This allows resource to be traded for higher performance. TP_CASC_LEN must be in the range 1 (default) to 9.

    *
        - TP_USE_COEFF_RELOAD

        - 
          allows the user to select if runtime coefficient reloading should be used.
          
          When defining the parameter:
          
          * 0 = static coefficients, defined in filter constructor,
          
          * 1 = reloadable coefficients, passed as argument to runtime function.
            
            Note: when used, optional port: ``port<input> coeff;`` will be added to the FIR.

    *
        - TP_NUM_OUTPUTS

        - 
          sets the number of ports to broadcast the output to.
          
          Note: when used, optional port: ``std::array<port<output>, TP_SSR> out2;`` will be added to the FIR.
          
          Note: For Windows API, additional output an exact copy of the data.
          
          Stream API interleaves the output data with a 128-bit pattern, e.g.:
          
          
          
          * samples 0-3 to be sent over stream0 for cint16 data type,
          
          * samples 4-7 to be sent over stream1 for cint16 data type.

    *
        - TP_DUAL_IP

        - 
          allows 2 stream inputs to be connected to FIR, increasing available throughput.
          
          When set to 0, single stream will be connected as FIRs input.
          
          When set to 1, two stream inputs will be connected.
          
          In such case data should be organized in 128-bit interleaved pattern, e.g.:
          
          
          
          * samples 0-3 to be sent over stream0 for cint16 data type,
          
          * samples 4-7 to be sent over stream1 for cint16 data type.
            
            Note: Dual input streams offer no throughput gain if only single output stream would be used. Therefore, dual input streams are only supported with 2 output streams.
            
            Note: Dual input ports offer no throughput gain if port api is windows. Therefore, dual input ports are only supported with streams and not windows.

    *
        - TP_API

        - 
          specifies if the input/output interface should be window-based or stream-based.
          
          The values supported are 0 (window API) or 1 (stream API).

    *
        - TP_SSR

        - 
          specifies the number of parallel input/output paths where samples are interleaved between paths, giving an overall higher throughput.
          
          An SSR of 1 means just one output leg, and is the backwards compatible option. The number of AIEs used is given by SSR^2*CASC_LEN.

.. ref-code-block:: cpp
	:class: overview-code-block

	template <
	    typename TT_DATA,
	    typename TT_COEFF,
	    unsigned int TP_FIR_LEN,
	    unsigned int TP_SHIFT,
	    unsigned int TP_RND,
	    unsigned int TP_INPUT_WINDOW_VSIZE,
	    unsigned int TP_CASC_LEN = 1,
	    unsigned int TP_USE_COEFF_RELOAD = 0,
	    unsigned int TP_NUM_OUTPUTS = 1,
	    unsigned int TP_DUAL_IP = 0,
	    unsigned int TP_API = 0,
	    unsigned int TP_SSR = 1
	    >
	class fir_sr_asym_graph: public graph

	// fields

	:ref:`port_array<doxid-namespacexf_1_1dsp_1_1aie_1ab4708eff876a1b889b8c86ee86ea8e02>` <input, TP_SSR> :ref:`in<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a3f7a5ded2239ff3706d6f74b46488af3>`
	:ref:`port_array<doxid-namespacexf_1_1dsp_1_1aie_1ab4708eff876a1b889b8c86ee86ea8e02>` <output, TP_SSR> :ref:`out<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a153b3820acabcbc567effc43ebdae04e>`
	:ref:`port_conditional_array<doxid-namespacexf_1_1dsp_1_1aie_1a09f20c89f0d4af5eccc4d40000103886>` <input, (TP_DUAL_IP==1), TP_SSR> :ref:`in2<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a2e5564783234205362a4f8857462dfbe>`
	:ref:`port_conditional_array<doxid-namespacexf_1_1dsp_1_1aie_1a09f20c89f0d4af5eccc4d40000103886>` <input, (TP_USE_COEFF_RELOAD==1), TP_SSR> :ref:`coeff<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a1fcad9ede606f2ef10c8a1da4ad60d7f>`
	:ref:`port_conditional_array<doxid-namespacexf_1_1dsp_1_1aie_1a09f20c89f0d4af5eccc4d40000103886>` <output, (TP_NUM_OUTPUTS==2), TP_SSR> :ref:`out2<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a9393e4a330e1e7b25cc86201baca9867>`
	:ref:`port_conditional_array<doxid-namespacexf_1_1dsp_1_1aie_1a09f20c89f0d4af5eccc4d40000103886>` <output, (TP_CASC_IN==CASC_IN_TRUE), TP_SSR> :ref:`casc_in<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a73eb60943f1c624e1f302a54d9b849de>`

Fields
------

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a3f7a5ded2239ff3706d6f74b46488af3:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::in:
.. ref-code-block:: cpp
	:class: title-code-block

	:ref:`port_array<doxid-namespacexf_1_1dsp_1_1aie_1ab4708eff876a1b889b8c86ee86ea8e02>` <input, TP_SSR> in

The input data array to the function. This input array is either a window API of samples of TT_DATA type or stream API (depending on TP_API). Note: Margin is added internally to the graph, when connecting input port with kernel port. Therefore, margin should not be added when connecting graph to a higher level design unit. Margin size (in Bytes) equals to TP_FIR_LEN rounded up to a nearest multiple of 32 bytes.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a153b3820acabcbc567effc43ebdae04e:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::out:
.. ref-code-block:: cpp
	:class: title-code-block

	:ref:`port_array<doxid-namespacexf_1_1dsp_1_1aie_1ab4708eff876a1b889b8c86ee86ea8e02>` <output, TP_SSR> out

The output data array from the function. This output is either a window API of samples of TT_DATA type or stream API (depending on TP_API). Number of output samples is determined by interpolation & decimation factors (if present).

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a2e5564783234205362a4f8857462dfbe:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::in2:
.. ref-code-block:: cpp
	:class: title-code-block

	:ref:`port_conditional_array<doxid-namespacexf_1_1dsp_1_1aie_1a09f20c89f0d4af5eccc4d40000103886>` <input, (TP_DUAL_IP==1), TP_SSR> in2

The conditional input array data to the function. This input is (generated when TP_DUAL_IP == 1) either a window API of samples of TT_DATA type or stream API (depending on TP_API).

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a1fcad9ede606f2ef10c8a1da4ad60d7f:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::coeff:
.. ref-code-block:: cpp
	:class: title-code-block

	:ref:`port_conditional_array<doxid-namespacexf_1_1dsp_1_1aie_1a09f20c89f0d4af5eccc4d40000103886>` <input, (TP_USE_COEFF_RELOAD==1), TP_SSR> coeff

The conditional coefficient array data to the function. This port is (generated when TP_USE_COEFF_RELOAD == 1) an array of coefficients of TT_COEFF type.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a9393e4a330e1e7b25cc86201baca9867:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::out2:
.. ref-code-block:: cpp
	:class: title-code-block

	:ref:`port_conditional_array<doxid-namespacexf_1_1dsp_1_1aie_1a09f20c89f0d4af5eccc4d40000103886>` <output, (TP_NUM_OUTPUTS==2), TP_SSR> out2

The output data array from the function. This output is (generated when TP_NUM_OUTPUTS == 2) either a window API of samples of TT_DATA type or stream API (depending on TP_API). Number of output samples is determined by interpolation & decimation factors (if present).

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a73eb60943f1c624e1f302a54d9b849de:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::casc_in:
.. ref-code-block:: cpp
	:class: title-code-block

	:ref:`port_conditional_array<doxid-namespacexf_1_1dsp_1_1aie_1a09f20c89f0d4af5eccc4d40000103886>` <output, (TP_CASC_IN==CASC_IN_TRUE), TP_SSR> casc_in

The conditional input array data to the function. This input is (generated when TP_CASC_IN == CASC_IN_TRUE) either a cascade input.


Methods
~~~~~~~

.. FunctionSection

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a92b45ec71d96981bd776b38aab0835d1:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::getkernels:

getKernels
----------


getKernels overload (1)
+++++++++++++++++++++++


.. ref-code-block:: cpp
	:class: title-code-block

	kernel* getKernels ()

Access function to get pointer to kernel (or first kernel in a chained and/or SSR configurations). No arguments required.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a969cc7fea452ebd6bb383ad87a33c996:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::getkernels-2:

getKernels overload (2)
+++++++++++++++++++++++


.. ref-code-block:: cpp
	:class: title-code-block

	kernel* getKernels (
	    int ssrOutPathIndex,
	    int ssrInPhaseIndex,
	    int cascadePosition
	    )

Access function to get pointer to an indexed kernel.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - ssrOutPathIndex

        - an index to the output data Path.

    *
        - ssrInPhaseIndex

        - an index to the input data Phase

    *
        - cascadePosition

        - an index to the kernel's position in the cascade.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a90815a69c133345bfa40769d1aea431b:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::getinnet:

getInNet
--------


.. ref-code-block:: cpp
	:class: title-code-block

	connect <stream, stream>* getInNet (
	    int ssrOutPathIndex,
	    int ssrInPhaseIndex,
	    int cascadePosition
	    )

Access function to get pointer to net of the ``in`` port. Nets only get assigned when streaming interface is being broadcast, i.e. nets only get used when TP_API == 1 and TP_CASC_LEN > 1 or TP_SSR > 1



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - ssrOutPathIndex

        - an index to the output data Path.

    *
        - ssrInPhaseIndex

        - an index to the input data Phase

    *
        - cascadePosition

        - an index to the kernel's position in the cascade.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1aeaaa44cb60681fddbe2874eadc571c8d:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::getin2net:

getIn2Net
---------


.. ref-code-block:: cpp
	:class: title-code-block

	connect <stream, stream>* getIn2Net (
	    int ssrOutPathIndex,
	    int ssrInPhaseIndex,
	    int cascadePosition
	    )

Access function to get pointer to net of the ``in2`` port, when port is being generated, i.e. when TP_DUAL_IP == 1. Nets only get assigned when streaming interface is being broadcast, i.e. nets only get used when TP_API == 1 and TP_CASC_LEN > 1 or TP_SSR > 1



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - ssrOutPathIndex

        - an index to the output data Path.

    *
        - ssrInPhaseIndex

        - an index to the input data Phase

    *
        - cascadePosition

        - an index to the kernel's position in the cascade.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1a0b6643f4a8cf532ec1f48f1620ecc3ad:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::getkernelarchs:

getKernelArchs
--------------


.. ref-code-block:: cpp
	:class: title-code-block

	unsigned int getKernelArchs ()

Access function to get kernel's architecture (or first kernel's architecture in a chained configuration).

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1aa23f2c8e62e2fc7d255ada7381e41eb4:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::fir_sr_asym_graph:

fir_sr_asym_graph
-----------------


fir_sr_asym_graph overload (1)
++++++++++++++++++++++++++++++


.. ref-code-block:: cpp
	:class: title-code-block

	fir_sr_asym_graph ()

This is the constructor function for the FIR graph with reloadable coefficients.

Constructor has no args. To be used with TP_USE_COEFF_RELOAD=1, taps needs to be passed through RTP.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1sr__asym_1_1fir__sr__asym__graph_1abeef2360becd712c42fa703991545ab9:
.. _cid-xf::dsp::aie::fir::sr_asym::fir_sr_asym_graph::fir_sr_asym_graph-2:

fir_sr_asym_graph overload (2)
++++++++++++++++++++++++++++++


.. ref-code-block:: cpp
	:class: title-code-block

	fir_sr_asym_graph (const std::vector <TT_COEFF>& taps)

This is the constructor function for the FIR graph with static coefficients.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - taps

        - a reference to the std::vector array of taps values of type TT_COEFF.

